# rules_generator

./: README.md  apply_rules.py  eda.py  generate_rules.py  pyproject.toml
src/firstbase/: __init__.py  cleaned_rule_generator.py  config.py  data_loader.py  data_writer.py  rule_applier.py
tests/: test_rule_applier.py
