[project]
name = "firstbase"
version = "0.1.0"
description = "Firstbase AI Challenge - Data Cleaning Rule Generator"
authors = [
    {name = "Jair Guedes", email = "jair.neto@ccc.ufcg.edu.br"},
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firstbase"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
